--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -10840,6 +10840,15 @@ select {
         background-position: 50% 50%; } }
   .profile-page .profile-page__sidebar h1 {
     text-transform: uppercase; }
+    @media screen and (min-width: 768px) {
+      .profile-page .profile-page__sidebar h1 {
+        margin-bottom: 0.4em; } }
+    @media screen and (min-width: 480px) {
+      .profile-page .profile-page__sidebar h1 {
+        margin-bottom: 0.4em; } }
+    @media screen and (min-width: 320px) {
+      .profile-page .profile-page__sidebar h1 {
+        margin-bottom: 0.4em; } }
   .profile-page .profile-page__sidebar p {
     display: none; }
     @media screen and (min-width: 768px) {
